[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-conversation-export-html"
version = "0.1.0"
description = "Export Claude Code conversations to self-contained HTML with interactive selection."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Claude Conversation Exporter Contributors" }
]
keywords = ["claude", "conversation", "export", "html", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Utilities"
]

[project.urls]
Homepage = "https://github.com/SinLucifer/claude-conversation-export-html"
Repository = "https://github.com/SinLucifer/claude-conversation-export-html"
Issues = "https://github.com/SinLucifer/claude-conversation-export-html/issues"

[project.scripts]
claude-html-start = "claude_conversation_export_html.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
